test/data/semantic-errors/bad-statement.derp
nom x = 5 derp
pront z derp